2004-10-17  Andy Wingo  <wingo@pobox.com>

	* common.mk (guilemoduledir, guilegwmoduledir): Get $guiledir from
	--with-guile-dir.

	* autogen-pkg.sh: Add --with-guiledir option to control install
	location of guile modules. Default PREFIX/share/guile/site.

2004-10-24  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh (sort_pkgs): Fix it right this time.

2004-10-16  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh: Get the module_directory for g-wrap from the
	right pkg-config file.
	(sort_pkgs): Echo the package into tsort even if it has no deps
	(e.g. docs/).
	Add a check for slib.

2004-10-12  Andreas Rottmann  <a.rottmann@gmx.at>

	* autogen-pkg.sh: Use tsort instead of hand-built package
	sorter. This fixes a bug when defs and defs-extra are both
	present.

	* autogen.sh: Fix sourcing for shells that don't search the
	current directory.

	* dev-environ.in: Remove special casing of glib for setting
	$LD_LIBRARY_PATH, use a new control file shlib-dirs.ac instead.

2004-10-12  Andy Wingo  <wingo@pobox.com>

	* h2def.py (proto_pat): Accept whitespace between the parens and
	the arguments.

2004-10-06  Andy Wingo  <wingo@pobox.com>

	* h2def.py: Make sure the emacs typecode is always first in the
	output.
	
2004-10-06  Andy Wingo  <wingo@pobox.com>

	* h2def.py: Change so we require one of --types, --procs, or
	--all. Change --enums-without-gtype to --c-enums. Add optional
	--with-header= option. Adjust logic to match.

2004-09-30  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh (autogen_pkg): An unrecognized config $i becomes
	guile-gnome-$i-YYYYMMDD+$source.

2004-09-27  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh: Require g-wrap = 1.9.3. g-wrap is in unstable
	releases, and as such we require specific micro versions.

	* autogen-support.sh: sed character range fix.

2004-09-22  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh, autogen-support.sh, autogen.sh, common.mk,
	dev-environ.in: Added license blocks.

	* README: No g-wrap 1.9.2
